--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Vite + React</title>
+    <title>Anvaya CRM</title>
   </head>
   <body>
     <div id="root"></div>
